# techscale

./: README.md  manage.py  pyproject.toml
TechScale/: apps.py
tech_scale/: asgi.py  settings.py  urls.py  wsgi.py
