[tool.poetry]
name = "tech-scale"
version = "0.1.0"
description = ""
authors = ["Ryan Jones <ryan.jones26@gmail.com>"]
readme = "README.md"
packages = [{include = "tech_scale"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
